--- a/src/components/CurrencyCard/styles.scss
+++ b/src/components/CurrencyCard/styles.scss
@@ -8,9 +8,10 @@
     padding: 10px 0 0 25px;
     background-color: #ffffff;
     
-    h3 {
+    .currencyName {
         padding: 0;
         margin: 0;
+        text-transform: capitalize;
     }
 
     .chartWrap {
