--- a/src/components/CurrencyCard/styles.scss
+++ b/src/components/CurrencyCard/styles.scss
@@ -1,33 +1,39 @@
 .currencyCard {
     border-radius: 10px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
-    height: 350px;
-    padding: 10px 0 0 25px;
+    height: 50px;
+    padding: 5px 0 0 25px;
     background-color: #ffffff;
+    margin: 20px 0;
     
-    .currencyName {
-        padding: 0;
-        margin: 0;
-        text-transform: capitalize;
-    }
-
-    .chartWrap {
-        img {
-            width: 500px;
-        }
-    }
-
-    .currencyInfo{
+    .currencyIcon{
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
-        height: 90%;
+        img {
+            margin-right: 10px;
+            width: 25px;
+        }
+        .currencyName {
+            padding: 0;
+            margin: 0;
+            text-transform: capitalize;
+        }
+    }
+    
+
+    .currencyInfo{
+        width: 60%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
         .priceData {
             display: flex;
+            width: 100%;
             li {
+                width: 33%;
                 font-size: 20px;
                 margin: 0 15px;
             }
