--- a/src/components/MainHeader/styles.scss
+++ b/src/components/MainHeader/styles.scss
@@ -1,6 +1,9 @@
 .mainHeader{
     width: 100%;
     height: 75px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 45px;
 
     .userInfo {
         display: flex;
