--- a/src/index.scss
+++ b/src/index.scss
@@ -42,3 +42,17 @@ button {
     width: calc(100% - 300px);
     height: 100%;
 }
+
+.page-main {
+    width: 100%;
+    height: 100%;
+}
+
+.main {
+    padding: 30px;
+    background-color: #f2f4faff;
+    height: 100%;
+    width: 100%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
