update nft portal

--- a/src/components/MainHeader/styles.scss
+++ b/src/components/MainHeader/styles.scss
@@ -32,7 +32,8 @@
 
             &:hover {
                 background-color: white;
-                color: #222831
+                color: #222831;
+
             }
         }
 
